# sync-it

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  deploy.sh  pyproject.toml
.github/workflows/: build.yml  ci-cd.yml  deploy.yml  lint.yml
infra/: .env.example
infra/docker/: CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
infra/docker/api-gateway/: Dockerfile  docker-compose.yml
infra/docker/caddy/: Caddyfile  docker-compose.yml
infra/docker/flower/: docker-compose.yml
infra/docker/gpt-api/: Dockerfile  docker-compose.yml
infra/docker/pgbouncer/: docker-compose.yml
infra/docker/postgres/: docker-compose.yml
infra/docker/redis/: docker-compose.yml
infra/docker/scraper-api/: Dockerfile  docker-compose.yml
infra/docker/telegram-api/: Dockerfile
infra/docker/telegram-bot/: Dockerfile  docker-compose.yml
infra/docker/vacancy-matcher/: Dockerfile  docker-compose.yml
infra/docker/vacancy-parser/: Dockerfile  docker-compose.yml
infra/docker/vacancy-processor/: Dockerfile  docker-compose.yml
libs/common/: CLAUDE.md
libs/common/database/: config.py  engine.py  logging.py  pyproject.toml
libs/common/environment/: config.py  enums.py
libs/common/gateway/: config.py  enums.py  utils.py
libs/common/logger/: config.py  enums.py  factory.py
libs/common/redis/: config.py  engine.py  pyproject.toml
libs/common/sentry/: config.py  enums.py  initialize.py  pyproject.toml
libs/common/shared/: __init__.py  pyproject.toml  unitofwork.py  utils.py
scripts/: copy_ssh_telethon_seesion.py  generate_telethon_session.py
services/api-gateway/: CLAUDE.md  pyproject.toml
services/api-gateway/src/: dependencies.py  main.py
services/api-gateway/src/clients/: proxy.py
services/gpt-api/: CLAUDE.md  pyproject.toml
services/gpt-api/src/: main.py  schemas.py  utils.py
services/gpt-api/src/core/: config.py  settings.py
services/gpt-api/src/internal/: g4f_finder.py  g4f_stress.py  test_gpt.py
services/gpt-api/src/services/: gpt.py
services/scraper-api/: CLAUDE.md  pyproject.toml
services/scraper-api/src/: main.py  schemas.py  utils.py
services/scraper-api/src/api/: __init__.py  health.py
services/scraper-api/src/api/v1/: __init__.py
services/scraper-api/src/api/v1/habr/: habr.py  schemas.py
services/scraper-api/src/api/v1/telegram/: __init__.py  schemas.py  telegram.py
services/scraper-api/src/clients/: __init__.py  base.py  habr.py  schemas.py  telegram.py
services/scraper-api/src/clients/telethon/: client.py  exceptions.py
services/scraper-api/src/core/: config.py
services/scraper-api/src/parsers/: __init__.py  base.py  exceptions.py  habr.py  telegram.py
services/telegram-bot/: CLAUDE.md  pyproject.toml
services/telegram-bot/src/: exceptions.py  main.py  unitofwork.py
services/telegram-bot/src/callbacks/: main.py  noop.py  preferences.py  skill.py  vacancy.py
services/telegram-bot/src/celery_app/: app.py
services/telegram-bot/src/clients/: grades.py  profession.py  protocols.py  schemas.py  skills.py  vacancy.py  work_formats.py
services/telegram-bot/src/commands/: commands.py  enums.py
services/telegram-bot/src/core/: config.py  loader.py
services/telegram-bot/src/database/migrations/versions/: 2025-08-14_added_models.py  2025-10-05_added_last_activity.py
services/telegram-bot/src/database/models/: base.py  enums.py  user.py  user_preference.py
services/telegram-bot/src/handlers/: faq.py  menu.py  noop.py  preferences.py  skills.py  support.py  vacancies.py
services/telegram-bot/src/handlers/faq/: __init__.py  command.py  helpers.py
services/telegram-bot/src/handlers/skills/: __init__.py  helpers.py  process.py  schemas.py  toggle.py  update.py
services/telegram-bot/src/keyboard/: buttons.py
services/telegram-bot/src/keyboard/inline/: buttons.py  main.py  preferences.py  skills.py  vacancies.py
services/telegram-bot/src/keyboard/reply/: buttons.py  general.py
services/telegram-bot/src/middlewares/: __init__.py  answer_callback.py  auth.py  database.py  logging.py  reset_state.py  service.py  throttling.py
services/telegram-bot/src/repositories/: user.py  user_preference.py
services/telegram-bot/src/schemas/: user.py  user_preference.py
services/telegram-bot/src/services/: user.py  user_preference.py
services/telegram-bot/src/setup/: lifespan.py  polling.py  webhook.py
services/telegram-bot/src/states/: __init__.py  preferences.py  vacancy.py
services/telegram-bot/src/tasks/: enums.py  process_resume.py  schemas.py
services/telegram-bot/src/utils/: clients.py  common.py  formatters.py  message.py
services/telegram-bot/src/utils/readers/: abstract.py  enums.py  pdf.py  txt.py
services/telegram-bot/src/utils/text_extractor/: __init__.py  exceptions.py  text_extractor.py
services/vacancy-matcher/: .air.toml  CLAUDE.md  go.mod  go.sum  main.go
services/vacancy-parser/: CLAUDE.md  pyproject.toml
services/vacancy-processor/: CLAUDE.md  pyproject.toml
services/vacancy-processor/src/: main.py
services/vacancy-processor/src/api/v1/: schemas.py  skill.py  vacancies.py
services/vacancy-processor/src/celery_app/: app.py  beat.py
services/vacancy-processor/src/clients/: __init__.py  gpt.py  matcher.py  schemas.py  vacancy.py
services/vacancy-processor/src/database/migrations/versions/: 2025-08-21_added_models.py  2025-10-01_added_indexes.py
services/vacancy-processor/src/database/models/: __init__.py  base.py  grade.py  profession.py  skill.py  tables.py  vacancy.py  work_format.py
services/vacancy-processor/src/database/models/enums/: base.py  grade.py  profession.py  skill.py  source.py
services/vacancy-processor/src/repositories/: vacancy.py  work_format.py
services/vacancy-processor/src/schemas/: grade.py  profession.py  skill.py  vacancy.py  work_format.py
services/vacancy-processor/src/services/: skill.py  vacancy.py
services/vacancy-processor/src/services/exceptions/: base.py  skill.py
services/vacancy-processor/src/tasks/: vacancies.py
services/vacancy-processor/src/utils/: extractor.py  processor.py  prompter.py
(+108 files in other folders)
