[project]
name = "syncit-core"
dynamic = ["version"]
requires-python = "==3.13.4"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
    "types-cachetools>=6.1.0.20250717",
]

[tool.setuptools.packages.find]
where = ["libs", "services"]

[tool.uv.sources]
syncit-core = { workspace = true }
database-lib = { workspace = true }
environment-lib = { workspace = true }
logger-lib = { workspace = true }
redis-lib = { workspace = true }
gateway-lib = { workspace = true }
shared-lib = { workspace = true }
sentry-lib = { workspace = true }

[tool.uv.workspace]
members = [
    "libs/common/*",
    "services/*",
]
exclude = [
    "services/vacancy-matcher",
    "**/__pycache__",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.preview = true
lint.select = ["ALL"]
# TODO: Убрать игнор документации классов/функций. Дать определение для каждого ignore
lint.ignore = ["I", "D", "DOC", "TD", "FIX001", "FIX002", "ANN401", "CPY001", "COM812", "EM", "S101", "TRY003", "RUF001", "RUF002", "RUF003", "PLR0913", "PLR0917"]
extend-exclude = ["**/database/migrations/versions"]

[tool.mypy]
mypy_path = [
    "libs",
    "services/api-gateway/src",
    "services/gpt-api/src",
    "services/scraper-api/src",
    "services/telegram-bot/src",
    "services/vacancy-parser/src",
    "services/vacancy-processor/src",
]
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"
incremental = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
explicit_package_bases = true

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
force_sort_within_sections = true
float_to_top = true
