[project]
name = "syncit-core"
dynamic = ["version"]
requires-python = "==3.13.4"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "asyncssh>=2.22.0",
    "celery-types>=0.23.0",
    "types-cachetools>=6.1.0.20250717",
]

style = [
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["libs", "services"]

[tool.uv.sources]
syncit-core = { workspace = true }
database-lib = { workspace = true }
environment-lib = { workspace = true }
logger-lib = { workspace = true }
redis-lib = { workspace = true }
gateway-lib = { workspace = true }
shared-lib = { workspace = true }
sentry-lib = { workspace = true }

[tool.uv.workspace]
members = [
    "libs/common/*",
    "services/*",
]
exclude = [
    "services/vacancy-matcher",
    "**/__pycache__",
]

[tool.ruff]
fix = true
line-length = 120
lint.preview = true
lint.select = ["ALL"]
lint.ignore = [
    "RUF001", # String contains ambiguous `с`
    "RUF002", # Docstring contains ambiguous `с`
    "RUF003", # Comment contains ambiguous `с`
    "FIX001", # Line contains FIXME, consider resolving the issue
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD001", # Invalid TODO tag: `FIXME`
    "TD003", # Missing issue link for this TODO
    "TD002", # Missing author in TODO
    "TD004", # Missing colon in TODO
    "TD005", # Missing issue description after `TODO`
    "D103", # Missing docstring in public function
    "CPY001", # Missing copyright notice at top of file
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D107", # Missing docstring in `__init__`
    "D203", # Incorrect blank line before class
    "D205", # 1 blank line required between summary line and description
    "D213", # Multi line summary second line
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation poin
    "DOC402", # `yield` is not documented in docstring
    "PLR0917", # Too many positional arguments
    "PLR0913", # Too many arguments in function definition
    "RUF067", #  `__init__` module should only contain docstrings and re-exports
    "DOC201", # `return` is not documented in docstring
    "DOC501", # Raised exception `ValueError` missing from docstring
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
    "EM102", # Exception must not use an f-string literal, assign to variable first
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM101", # Exception must not use a string literal, assign to variable first
    "S101", # Use of `assert` detected
    "I", # Besause using isort
    "COM812", # Trailing comma

]
extend-exclude = ["**/database/migrations/versions"]

[tool.mypy]
mypy_path = [
    "libs",
    "services/api-gateway/src",
    "services/gpt-api/src",
    "services/scraper-api/src",
    "services/telegram-bot/src",
    "services/vacancy-parser/src",
    "services/vacancy-processor/src",
]
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"
incremental = true
warn_return_any = true
warn_unused_configs = true
show_error_context = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
explicit_package_bases = true

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
force_sort_within_sections = true
float_to_top = true
