[project]
name = "scraper-api"
dynamic = ["version"]
dependencies = [
    "environment-lib",
    "fastapi>=0.115.12",
    "logger-lib",
    "syncit-core",
    "uvicorn[standard]>=0.34.3",
    "sentry-lib",
    "shared-lib",
]

[tool.uv.sources]
syncit-core = { workspace = true }
logger-lib = { workspace = true }
environment-lib = { workspace = true }
sentry-lib = { workspace = true }
shared-lib = { workspace = true }
