[project]
name = "telegram-bot"
dynamic = ["version"]
dependencies = [
    "aiogram>=3.20.0.post0",
    "cachetools>=6.1.0",
    "database-lib",
    "fastapi>=0.116.1",
    "gateway-lib",
    "logger-lib",
    "shared-lib",
    "syncit-core",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0",
    "sentry-lib",
    "celery>=5.5.3",
    "redis-lib",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pypdf>=6.0.0",
]

[dependency-groups]
dev = [
    "hupper>=1.12.1",
]

[tool.uv.sources]
syncit-core = { workspace = true }
logger-lib = { workspace = true }
database-lib = { workspace = true }
gateway-lib = { workspace = true }
shared-lib = { workspace = true }
sentry-lib = { workspace = true }
redis-lib = { workspace = true }
