[project]
name = "vacancy-processor"
dynamic = ["version"]
dependencies = [
    "celery>=5.5.3",
    "database-lib",
    "fastapi>=0.115.13",
    "gateway-lib",
    "logger-lib",
    "redis-lib",
    "shared-lib",
    "syncit-core",
    "uvicorn[standard]>=0.34.3",
    "sentry-lib",
]

[tool.uv.sources]
syncit-core = { workspace = true }
logger-lib = { workspace = true }
database-lib = { workspace = true }
redis-lib = { workspace = true }
gateway-lib = { workspace = true }
shared-lib = { workspace = true }
sentry-lib = { workspace = true }
